task five completed

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,11 @@
-<p>home works!</p>
-
+<div class="jumbotron">
+  <h1 class="display-3">Heroes</h1>
+  <p class="lead">is an American superhero drama television series created by Tim Kring that appeared on NBC for four seasons from
+  September 25, 2006 to February 8</p>
+  <hr class="my-2">
+  <p>Created by Tim Kring. With Jack Coleman, Hayden Panettiere, Milo Ventimiglia, Masi Oka. Common people discover that they
+  have super powers.</p>
+  <p class="lead">
+    <a class="btn btn-primary btn-lg" routerLink="/heroes" role="button">Jump to Heroes</a>
+  </p>
+</div>
