--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -6,6 +6,7 @@
 
 <div class="row">
   <div class="col-4 offset-8 my-3">
+    <!-- <input [(ngModel)]="phrase" [formControl]="phraseControl" type="text" class="form-control" [placeholder]="searchText"> -->
     <input [formControl]="phraseControl" type="text" class="form-control" [placeholder]="searchText">
   </div>
 </div>
