--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -2,18 +2,20 @@
 egy alapértelmezett Bootstrap stílusú navbar jelenjen meg. -->
 
 <nav class="navbar navbar-expand-sm navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+  <a class="navbar-brand nav-link" routerLink="/">Navbar</a>
   <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
       aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="collapsibleNavId">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-      <li class="nav-item active">
-        <a class="nav-link" routerLink="/">Home</a>
-      </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/heroes">Heroes</a>
+        <a (click)="flipActive()" class="nav-link" [class]="activeItem" routerLink="/">Home</a>
+      </li>
+      <!-- <li class="nav-item active"> -->
+      <li class="nav-item">
+        <a (click)="flipActive()" class="nav-link" [class]="activeItem" routerLink="/heroes">Heroes</a>
       </li>
       <!-- <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
